--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,16 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
+	<meta property="og:title" content="A decade of grocery prices">
+	<meta property="og:type" content="article" />
+	<meta property="og:image" content="http://carysmills.com/decadeofgroceries/previewimage.png">
+	<meta property="og:url" content="http://carysmills.com/decadeofgroceries/">
+	<meta name="twitter:card" content="summary_large_image">
+
+	<meta property="og:description" content="See how much groceries were a decade ago, compared to now.">
+	<meta property="og:site_name" content="Carys Mills">
+	<meta name="twitter:image:alt" content="A preview of the grocery price interactive">
+
 	<title>A decade of grocery prices</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
@@ -13,7 +23,8 @@
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;500;700&display=swap" rel="stylesheet">	<script defer src='/build/bundle.js'></script>
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;500;700&display=swap" rel="stylesheet">
+	<script defer src='/build/bundle.js'></script>
 </head>
 
 <body>
